--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,11 +11,12 @@ img{
     aspect-ratio: 1/1;
     object-fit: cover;
     transition: ease-in-out 3ss;
+    
 
 }
 
 
-.slides > img:not(img.active){
+.slides > .slide:not(.slide.active){
     display: none;
 
 }
@@ -25,20 +26,22 @@ img{
 
 .slides{
     position: relative;
+}
+
+.slide{
+    position: relative;
     height: 500px;
 }
 
 .controls {
     position: absolute;
-    /* width: 100%; */
+    width: 100%;
     height: 100%;
-    top: 50%;
-    left: 50%;
-    translate: 0 -50%;
+    align-items: center;
     display: flex;
-    flex-direction: column;
     justify-content: space-between;
     color: white;
+    z-index: 1;
 }
 
 button{
@@ -49,4 +52,22 @@ button{
 
 .active{
     display: block;
+}
+
+.card_overlay{
+    background-color: #0000001a;
+    height: 100%;
+    width: 100%;
+    top: 0%;
+    left: 0%;
+    position: absolute;
+    display: flex;
+    color: white;
+    align-items: flex-end;
+    padding-bottom: 5rem;
+    padding-left: 5rem;
+}
+
+.text_overlay{
+
 }
